[tool.poetry]
name = "millserver"
version = "0.1.0"
description = "Sever for Mill game"
authors = ["Raidzin <60663550+Raidzin@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litestar = "^2.8.2"
granian = "^1.2.3"
typer = "<0.12.0"
pydantic = "^2.7.0"
asyncpg = "^0.29.0"

[tool.poetry.scripts]
dev = "millserver.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
