[tool.poetry]
name = "millserver"
version = "0.1.0"
description = "Sever for Mill game"
authors = ["Raidzin <60663550+Raidzin@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = "^2.8.2"
granian = "^1.2.3"
typer = "<0.12.0"
pydantic = "^2.7.0"
asyncpg = "^0.29.0"


[tool.poetry.group.test.dependencies]
mypy = "^1.9.0"
ruff = "^0.4.1"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.29.0"

[tool.poetry.scripts]
dev = "millserver.cli:cli"

[tool.ruff]
include = ["millserver/**/*.py", "tests/**/*.py"]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "N", # pep8-naming
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "COM", # flake8-commas
    "UP", # pyupgrade
    "PT", # flake8-pytest-style
]
preview = true

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'

[tool.mypy]
packages = ['millserver', 'tests']
check_untyped_defs = true
plugins = [
    "pydantic.mypy",
]

[tool.coverage.report]
skip_empty = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
